melhoria na introdução e correçòes de código

--- a/documents/sbc-template.bib
+++ b/documents/sbc-template.bib
@@ -54,3 +54,8 @@
 	url = {https://code.google.com/p/googletest/}
 }
 
+@misc{website:xunit,
+	title = {xUnit.net is a free, open source, community-focused unit testing tool for the .NET Framework},
+	year = {2014},
+	url = {https://github.com/xunit/xunit}
+}
